--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Animated 3d Flipping Loading Text</title>
+  <title>Animated 3d Flipping Loading Text</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -31,7 +31,24 @@
 
 
 </html>
-<!-- partial -->
+  <!-- can remove footer -->
+  <style>
+    footer {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      color: #fff;
+      text-align: center;
+      padding: 10px 0;
+      font-size: 50px;
+    }
+  </style>
+  <footer>
+    <p>
+      <a href="https://www.instagram.com/ig.harsh_07/" target="_blank">~ HaRsH</a>
+    </p>
+  </footer>
+  <!-- can remove footer -->
   
 </body>
 </html>
